<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">
    <Button
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/first"
        android:textSize="@dimen/btnTextSizeMedium"
        android:fontFamily="@font/asessorc_font"
        android:background="@color/lightColorAccent"
        android:onClick="onClick"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:background="@color/lightColorAccent"
        android:fontFamily="@font/gothic_font"
        android:text="@string/second"
        android:textSize="@dimen/btnTextSizeMedium"
        android:onClick="onClick"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first" />


    <Button
        android:id="@+id/third"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/third"
        android:textSize="@dimen/btnTextSizeMedium"
        android:fontFamily="@font/loocsir_droids_font"
        android:background="@color/lightColorAccent"
        android:onClick="onClick"

        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/second"
        />

    <Button
        android:id="@+id/fourth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/fourth"
        android:textSize="@dimen/btnTextSizeMedium"
        android:fontFamily="@font/gothic_font"
        android:background="@color/lightColorAccent"
        android:onClick="onClick"

        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/third"
        />
</androidx.constraintlayout.widget.ConstraintLayout>