<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RxJavaSimpleActivity">

    <Button
        android:id="@+id/serverButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:background="@color/lightColorAccent"
        android:fontFamily="@font/asessorc_font"
        android:text="@string/server"
        android:textSize="@dimen/btnTextSizeMedium"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/toastButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:background="@color/lightColorAccent"
        android:fontFamily="@font/loocsir_droids_font"
        android:text="@string/toast"
        android:textSize="@dimen/btnTextSizeMedium"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serverButton" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/result"
        android:textSize="@dimen/textSizeLarge"
        android:textAlignment="center"
        android:fontFamily="@font/gothic_font"
        android:textColor="@color/colorAccent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toastButton" />

</androidx.constraintlayout.widget.ConstraintLayout>